# pi-glass

./: .gitignore  CLAUDE.md  Cargo.toml  FUTURE_WORK.md  HTTP_CHECK.md  README.md  build-aarch64.env  build-aarch64.sh  build-mips.sh  build-mt76x8.env  build-pi.env  build-pi.sh  build-win64.env  build-win64.sh  build-x86_64.env  build-x86_64.sh  build.env  build.rs  init-wsl.sh  mips-ld-wrapper.sh  pi-glass.init
.cargo/: config.toml
.github/workflows/: build.yml
deploy/: config-openwrt.toml  config.toml  pi-glass-mailer.service  pi-glass.init  pi-glass.service
src/: app.css  app.js  lib.rs  main.rs
src/favicon/: site.webmanifest
src/icons/: digiweb.html  heanet.html  outlook.html  youtube.html
src/templates/: host.html  page.html  service_card.html  service_item.html  stats_section.html
web/: build.js  package-lock.json  package.json
