[package]
name = "pi-glass"
version = "0.9.0"
edition = "2021"

[[bin]]
name = "pi-glass"
path = "src/main.rs"

[[bin]]
name = "pi-glass-mailer"
path = "src/bin/mailer.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
surge-ping = "0.8"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "multipart"] }
